# higherrrrrrr.fun

./: .env.local  .eslintrc.json  .gitignore  .gitmodules  CREATORS.md  LEGAL.md  LICENSE  README.md  Snapshot.md  foundry.toml  generate-abis.sh  next.config.js  package-lock.json  package.json  remappings.txt
alpha/: Dockerfile  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.js  wagmi.config.ts
api/: Dockerfile  README.md  app.py  config.py  requirements.txt
app/: .eslintrc.json  Dockerfile  hardhat.config.js  package.json
docs/: CONTRIBUTING.md  CREATOR-GUIDE.md  INVESTMENT_DAO_WHITEPAPER.md  README.md  SECURITY-POSTURE.md  TECHNICAL-DESIGN-DOCUMENT.md  TOKENOMICS.md  WHITEPAPER.md
documentation/: README.md  content-guidelines.md  creator-guide.md  not-a-lawyer-lawyer-brief.md  tokenomics-brief.md  tokenomics.md  whitepaper.md
dynamic-meme/: foundry.toml
evolutionary-meme/: .gitmodules  foundry.toml  remappings.txt
landing/: Dockerfile  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json
ponder/: .env.example  (+2 more)
services/protocol/programs/protocol/: Cargo.toml  rust-toolchain.toml
services/protocol/programs/protocol/src/: amm.rs  errors.rs  lib.rs
services/protocol/programs/protocol/src/instructions/: conviction_nfts.rs  create_meme_token.rs  evolutions.rs  fee_distribution.rs  mod.rs  simple_amm.rs  trade_amm.rs  trade_meteora.rs  trade_orca.rs
services/protocol/programs/protocol/src/state/: conviction_registry.rs  evolution_data.rs  fee_vault.rs  meme_token_state.rs  mod.rs
(+891 files in other folders)
