[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"
orca_whirlpools_core = "0.1"   
orca_whirlpools_client = "0.1"  
mpl-token-metadata = "1.9.9"
num-traits = "0.2"
uint = { version = "0.9", default-features = false }
bytemuck = { version = "1.13", features = ["derive"] }
thiserror = "1.0"